--- a/src/components/Authorization/Header/header.css
+++ b/src/components/Authorization/Header/header.css
@@ -1,1 +1,84 @@
-/*# sourceMappingURL=header.css.map */
+.header {
+  display: block;
+  position: sticky;
+  padding-left: max(1.5rem, 50% - 850px);
+  padding-right: max(1.5rem, 50% - 850px);
+}
+.header__contactsBlok {
+  background-color: #e9edef;
+  display: flex;
+  text-align: center;
+  padding-bottom: 0.5em;
+  padding-top: 0.5em;
+}
+.header__contactsBlok__connection {
+  border-right: 1px solid #9dadb7;
+  margin-left: auto;
+  padding-right: 1em;
+}
+.header__contactsBlok__language {
+  display: flex;
+  gap: 0.5em;
+  padding: 0 1em;
+}
+.header__navigationBlok {
+  background-color: #fff;
+  align-items: center;
+  border-bottom: 1px solid #f5f5f5;
+  display: flex;
+  flex: 1 1;
+  padding: 1em 0;
+}
+.header__navigationBlok__buttonBlok {
+  align-items: center;
+  display: flex;
+  flex: 1 1;
+}
+.header__navigationBlok__buttonBlok__a {
+  max-height: 3rem;
+  max-width: 8rem;
+}
+.header__navigationBlok__buttonBlok__a__img {
+  background-image: url(../../../assets/logo.png);
+  vertical-align: top;
+}
+.header__navigationBlok__buttonBlok__navigationButton {
+  margin-left: 1em;
+  display: flex;
+  flex: 1 1;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv {
+  flex: 1 1;
+  white-space: nowrap;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a {
+  color: #000;
+  padding: 1em 0.7em;
+  transition: 0.3s;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a:hover {
+  color: #fff;
+  background: #00466d;
+}
+.header__navigationBlok__bookingButton {
+  gap: 0.3em;
+}
+.header__navigationBlok__bookingButton__a {
+  align-items: center;
+  border: 3px solid #00466d;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  padding: calc(1em - 3px) calc(1.3em - 3px);
+  transition: 0.3s;
+  white-space: nowrap;
+}
+.header__navigationBlok__bookingButton__a:hover {
+  color: #fff;
+  background-color: #00466d;
+}/*# sourceMappingURL=header.css.map */
