--- a/src/components/Authorization/Header/header.css
+++ b/src/components/Authorization/Header/header.css
@@ -60,10 +60,33 @@
   color: #000;
   padding: 1em 0.7em;
   transition: 0.3s;
+  cursor: pointer;
+  display: flex;
 }
 .header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a:hover {
   color: #fff;
   background: #00466d;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  display: none;
+  position: absolute;
+  max-height: 450px;
+  overflow-y: auto;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA {
+  padding: 0.8em 1.5em;
+  display: flex;
+  color: #000;
+  transition: 0.3s;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA:hover {
+  color: #fff;
+  background: #00466d;
+}
+.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li:hover .header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
+  display: block;
 }
 .header__navigationBlok__bookingButton {
   gap: 0.3em;
