--- a/src/main.scss
+++ b/src/main.scss
@@ -8,8 +8,10 @@ $textColormain: #000;
 }
 
 html {
+    font: 112.5%/1.45 'Proxima', 'Helvetica Neue', 'Segoe UI', 'Helvetica',
+        'Arial', sans-serif;
     color: $textColormain;
-    font-size: 16px;
+    font-size: 18px;
     overflow-y: scroll;
 }
 
@@ -29,4 +31,8 @@ li {
 
 nav {
     white-space: nowrap;
+}
+
+small {
+    font-size: 80%;
 }
