--- a/src/components/Authorization/Header/header.css
+++ b/src/components/Authorization/Header/header.css
@@ -1,27 +1,32 @@
-.header {
-  display: block;
+.headerBlock {
   position: sticky;
+  top: 0;
+  z-index: 10;
+}
+.headerBlock__header {
+  height: 100%;
   padding-left: max(1.5rem, 50% - 850px);
   padding-right: max(1.5rem, 50% - 850px);
 }
-.header__contactsBlok {
+.headerBlock__header__contactsBlok {
   background-color: #e9edef;
   display: flex;
   text-align: center;
   padding-bottom: 0.5em;
   padding-top: 0.5em;
 }
-.header__contactsBlok__connection {
+.headerBlock__header__contactsBlok__connection {
   border-right: 1px solid #9dadb7;
   margin-left: auto;
   padding-right: 1em;
 }
-.header__contactsBlok__language {
+.headerBlock__header__contactsBlok__language {
   display: flex;
   gap: 0.5em;
   padding: 0 1em;
 }
-.header__navigationBlok {
+.headerBlock__header__navigationBlok {
+  font-size: 14px;
   background-color: #fff;
   align-items: center;
   border-bottom: 1px solid #f5f5f5;
@@ -29,45 +34,45 @@
   flex: 1 1;
   padding: 1em 0;
 }
-.header__navigationBlok__buttonBlok {
+.headerBlock__header__navigationBlok__buttonBlok {
   align-items: center;
   display: flex;
   flex: 1 1;
 }
-.header__navigationBlok__buttonBlok__a {
+.headerBlock__header__navigationBlok__buttonBlok__a {
   max-height: 3rem;
   max-width: 8rem;
 }
-.header__navigationBlok__buttonBlok__a__img {
+.headerBlock__header__navigationBlok__buttonBlok__a__img {
   background-image: url(../../../assets/logo.png);
   vertical-align: top;
 }
-.header__navigationBlok__buttonBlok__navigationButton {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton {
   margin-left: 1em;
   display: flex;
   flex: 1 1;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv {
   flex: 1 1;
   white-space: nowrap;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul {
   display: flex;
   justify-content: center;
   position: relative;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a {
   color: #000;
   padding: 1em 0.7em;
   transition: 0.3s;
   cursor: pointer;
   display: flex;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a:hover {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__a:hover {
   color: #fff;
   background: #00466d;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
   background-color: #fff;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   display: none;
@@ -75,23 +80,23 @@
   max-height: 450px;
   overflow-y: auto;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA {
   padding: 0.8em 1.5em;
   display: flex;
   color: #000;
   transition: 0.3s;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA:hover {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav__newUl__newLi__newA:hover {
   color: #fff;
   background: #00466d;
 }
-.header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li:hover .header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
+.headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li:hover .headerBlock__header__navigationBlok__buttonBlok__navigationButton__nuv__ul__li__newNav {
   display: block;
 }
-.header__navigationBlok__bookingButton {
+.headerBlock__header__navigationBlok__bookingButton {
   gap: 0.3em;
 }
-.header__navigationBlok__bookingButton__a {
+.headerBlock__header__navigationBlok__bookingButton__a {
   align-items: center;
   border: 3px solid #00466d;
   cursor: pointer;
@@ -101,7 +106,7 @@
   transition: 0.3s;
   white-space: nowrap;
 }
-.header__navigationBlok__bookingButton__a:hover {
+.headerBlock__header__navigationBlok__bookingButton__a:hover {
   color: #fff;
   background-color: #00466d;
 }/*# sourceMappingURL=header.css.map */
