--- a/src/components/Authorization/Main/main.css
+++ b/src/components/Authorization/Main/main.css
@@ -75,7 +75,118 @@
   font-size: 13px;
   color: #000;
 }
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__title__two {
+  text-align: center;
+  line-height: 1.2;
+  padding-bottom: 15px;
+  word-break: break-word;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 13px;
+  color: #000;
+  padding-top: 10px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory {
+  padding-bottom: 10px;
+  color: #000;
+  font-size: 14px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__label {
+  font-size: inherit;
+  color: inherit;
+  display: block;
+  line-height: normal;
+  padding-bottom: 4px;
+  font-family: inherit;
+  word-break: break-word;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__input {
+  font-family: inherit;
+  font-size: 13px;
+  font-weight: 400;
+  display: block;
+  width: 100%;
+  height: 30px;
+  padding: 0 8px;
+  transition: border 0.2s;
+  border: 1px solid #e3e3e3;
+  border-radius: 2px;
+  outline: none;
+  background-color: #fff;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__error {
+  font-size: 12px;
+  display: none;
+  padding-top: 4px;
+  color: red;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divCheckbox {
+  box-sizing: border-box;
+  background: none;
+  background-image: none;
+  height: auto;
+  -webkit-font-smoothing: antialiased;
+  padding-bottom: 10px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divCheckbox__certain {
+  align-items: baseline;
+  color: #000;
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divCheckbox__certain__input {
+  margin: 3px 4px 3px 0;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divCheckbox__certain__label {
+  font-size: inherit;
+  color: inherit;
+  display: block;
+  line-height: normal;
+  padding-bottom: 4px;
+  font-family: inherit;
+  word-break: break-word;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divA {
+  text-align: left;
+  line-height: 1.2;
+  padding-bottom: 10px;
+  color: #000;
+  word-break: break-word;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 13px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divSpan {
+  text-align: left;
+  line-height: 1.2;
+  padding-bottom: 10px;
+  color: #000;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divSpan__span {
+  font-size: 10px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divButton {
+  padding-top: 50px;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divButton__button {
+  background-color: #003e69;
+  border-radius: 2px;
+  color: #ffffff;
+  line-height: 1.2em;
+  font-size: 14px;
+  width: 100%;
+  padding: 10px 10px;
+  border: none;
+}
+.main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divButton__button:hover {
+  background-color: #4f616c;
+}
 
 span {
   font-size: 20px;
+}
+
+a:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
