--- a/src/components/Authorization/Main/main.scss
+++ b/src/components/Authorization/Main/main.scss
@@ -75,6 +75,115 @@ $bgImageH1: '../../../assets/cover.png';
                                         sans-serif;
                                     font-size: 13px;
                                     color: #000;
+                                    &__two {
+                                        text-align: center;
+                                        line-height: 1.2;
+                                        padding-bottom: 15px;
+                                        word-break: break-word;
+                                        font-family: 'Open Sans', 'Arial',
+                                            sans-serif;
+                                        font-size: 13px;
+                                        color: #000;
+                                        padding-top: 10px;
+                                    }
+                                }
+                                &__inputObligatory {
+                                    padding-bottom: 10px;
+                                    color: #000;
+                                    font-size: 14px;
+                                    &__label {
+                                        font-size: inherit;
+                                        color: inherit;
+                                        display: block;
+                                        line-height: normal;
+                                        padding-bottom: 4px;
+                                        font-family: inherit;
+                                        word-break: break-word;
+                                    }
+                                    &__input {
+                                        font-family: inherit;
+                                        font-size: 13px;
+                                        font-weight: 400;
+                                        display: block;
+                                        width: 100%;
+                                        height: 30px;
+                                        padding: 0 8px;
+                                        transition: border 0.2s;
+                                        border: 1px solid #e3e3e3;
+                                        border-radius: 2px;
+                                        outline: none;
+                                        background-color: #fff;
+                                        margin: 0;
+                                        -webkit-font-smoothing: antialiased;
+                                    }
+                                    &__error {
+                                        font-size: 12px;
+                                        display: none;
+                                        padding-top: 4px;
+                                        color: red;
+                                    }
+                                    &__divCheckbox {
+                                        box-sizing: border-box;
+                                        background: none;
+                                        background-image: none;
+                                        height: auto;
+                                        -webkit-font-smoothing: antialiased;
+                                        padding-bottom: 10px;
+                                        &__certain {
+                                            align-items: baseline;
+                                            color: #000;
+                                            font-size: 14px;
+                                            display: flex;
+                                            flex-direction: row;
+                                            &__input {
+                                                margin: 3px 4px 3px 0;
+                                            }
+                                            &__label {
+                                                font-size: inherit;
+                                                color: inherit;
+                                                display: block;
+                                                line-height: normal;
+                                                padding-bottom: 4px;
+                                                font-family: inherit;
+                                                word-break: break-word;
+                                            }
+                                        }
+                                    }
+                                    &__divA {
+                                        text-align: left;
+                                        line-height: 1.2;
+                                        padding-bottom: 10px;
+                                        color: #000;
+                                        word-break: break-word;
+                                        font-family: 'Open Sans', 'Arial',
+                                            sans-serif;
+                                        font-size: 13px;
+                                    }
+                                    &__divSpan {
+                                        text-align: left;
+                                        line-height: 1.2;
+                                        padding-bottom: 10px;
+                                        color: #000;
+                                        &__span {
+                                            font-size: 10px;
+                                        }
+                                    }
+                                    &__divButton {
+                                        padding-top: 50px;
+                                        &__button {
+                                            background-color: #003e69;
+                                            border-radius: 2px;
+                                            color: #ffffff;
+                                            line-height: 1.2em;
+                                            font-size: 14px;
+                                            width: 100%;
+                                            padding: 10px 10px;
+                                            border: none;
+                                        }
+                                        &__button:hover {
+                                            background-color: #4f616c;
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -87,4 +196,8 @@ $bgImageH1: '../../../assets/cover.png';
 
 span {
     font-size: 20px;
+}
+
+a:hover {
+    text-decoration: underline;
 }
