--- a/src/components/Authorization/Main/main.css
+++ b/src/components/Authorization/Main/main.css
@@ -54,7 +54,6 @@
   width: 500px;
   color: rgb(0, 0, 0);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 30px 0px;
-  position: absolute;
 }
 .main__registrationBlock__registrationForm__block__form__mainBlock__content {
   display: flex;
@@ -180,7 +179,7 @@
   border: none;
 }
 .main__registrationBlock__registrationForm__block__form__mainBlock__content__reg__inputObligatory__divButton__button:hover {
-  background-color: #4f616c;
+  background-color: #000066;
 }
 
 span {
