small fix main content and footer css

--- a/src/components/Authorization/MainEl/mainEl.css
+++ b/src/components/Authorization/MainEl/mainEl.css
@@ -186,6 +186,6 @@ span {
   font-size: 20px;
 }
 
-a:hover {
+.a:hover {
   text-decoration: underline;
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=mainEl.css.map */
