--- a/src/main.css
+++ b/src/main.css
@@ -31,4 +31,10 @@ nav {
 
 small {
   font-size: 80%;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 16px;
+  }
 }/*# sourceMappingURL=main.css.map */
