--- a/src/components/Authorization/MainEl/mainEl.scss
+++ b/src/components/Authorization/MainEl/mainEl.scss
@@ -57,7 +57,6 @@ $bgImageH1: '../../../assets/cover.png';
                         width: 500px;
                         color: rgb(0, 0, 0);
                         box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 30px 0px;
-
                         &__content {
                             display: flex;
                             min-width: 0;
@@ -100,6 +99,15 @@ $bgImageH1: '../../../assets/cover.png';
                                         font-family: inherit;
                                         word-break: break-word;
                                     }
+                                    &__labelError {
+                                        font-size: inherit;
+                                        color: red;
+                                        display: block;
+                                        line-height: normal;
+                                        padding-bottom: 4px;
+                                        font-family: inherit;
+                                        word-break: break-word;
+                                    }
                                     &__input {
                                         font-family: inherit;
                                         font-size: 13px;
@@ -116,9 +124,28 @@ $bgImageH1: '../../../assets/cover.png';
                                         margin: 0;
                                         -webkit-font-smoothing: antialiased;
                                     }
-                                    &__error {
-                                        font-size: 12px;
+                                    &__inputError {
+                                        font-family: inherit;
+                                        font-size: 13px;
+                                        font-weight: 400;
+                                        display: block;
+                                        width: 100%;
+                                        height: 30px;
+                                        padding: 0 8px;
+                                        transition: border 0.2s;
+                                        border-radius: 2px;
+                                        outline: none;
+                                        background-color: #fff;
+                                        margin: 0;
+                                        -webkit-font-smoothing: antialiased;
+                                        border: 1px solid red;
+                                    }
+                                    &__errorNone {
                                         display: none;
+                                    }
+                                    &__errorBlock {
+                                        font-size: 12px;
+                                        display: block;
                                         padding-top: 4px;
                                         color: red;
                                     }
